--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:22.1.0'
     compile 'com.afollestad:material-dialogs:0.7.3.1'
     compile 'de.keyboardsurfer.android.widget:crouton:1.8.5@aar'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
