--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile 'com.afollestad:material-dialogs:0.7.3.1'
     compile 'de.keyboardsurfer.android.widget:crouton:1.8.5@aar'
     compile 'com.squareup.picasso:picasso:2.5.2'
+    compile 'com.viewpagerindicator:library:2.4.1@aar'
 }
