--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,5 +22,10 @@
             android:name=".activity.ImageActivity"
             android:label="@string/activity_image" >
         </activity>
+
+        <activity
+            android:name=".activity.WebViewActivity"
+            android:label="@string/activity_web_view" >
+        </activity>
     </application>
 </manifest>
